Add Twitter share link to author section and update shareTwitter flag in ExoReL post

--- a/_posts/2026-01-31-ExoReL.markdown
+++ b/_posts/2026-01-31-ExoReL.markdown
@@ -11,6 +11,7 @@ description: "Bayesian retrieval framework for reflected-light spectroscopy of e
 category: project
 author: Mario Damiano
 externalLink: false
+shareTwitter: false
 ---
 
 ExoReL (Exoplanetary Reflected Light Retrieval) is a Bayesian retrieval
